remove ext auth code
